--- a/blog.html
+++ b/blog.html
@@ -508,7 +508,7 @@
                                             </ul>
                                         </div>
                                     </div> -->
-                                    <div class="sidebar-widget sidebar-widget-two">
+                                    <div class="sidebar-widget sidebar-widget-two" id="FullSubscribeFollowers">
                                         <div class="widget-title mb-25">
                                             <h2 class="title">Subscribe & Followers</h2>
                                             <div class="section-title-line"></div>
@@ -525,11 +525,11 @@
                                         </div>
                                     </div>
                                     <div class="sidebar-widget sidebar-widget-two">
-                                        <div class="widget-title mb-30">
+                                        <div class="widget-title mb-30" id="RecentNews">
                                             <h6 class="title">Recent News</h6>
                                             <div class="section-title-line"></div>
                                         </div>
-                                        <div class="hot-post-wrap">
+                                        <div class="hot-post-wrap" id="FullRecentPosts">
                                             <div class="hot-post-item">
                                                 <div class="hot-post-thumb">
                                                     <a href="blog-details.html"><img src="assets/img/blog/blog_rc_post.jpg" alt=""></a>
@@ -571,7 +571,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="sidebar-widget sidebar-widget-two">
+                                    <!-- <div class="sidebar-widget sidebar-widget-two">
                                         <div class="sidebar-newsletter">
                                             <div class="icon"><i class="flaticon-envelope"></i></div>
                                             <h4 class="title">Daily Newsletter</h4>
@@ -589,7 +589,7 @@
                                                 </form>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -757,7 +757,12 @@
 
         <script src="./JS_MAIN/Header.js"></script>
         <script src="./JS_MAIN/Footer.js"></script>
-
+        <!-- START FOR THE TOASTIFY JS -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <!-- END FILE TOASTIFY JS -->
+        <!-- START FILE CKE -->
+        <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/classic/ckeditor.js"></script>
+        <!-- END FILE CKE -->
          <script src="./JS_MAIN/general.js"></script>
         <script src="./JS_MAIN/menu.js"></script>
         <script src="./JS_MAIN/blog.js"></script>
