--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
         <link rel="stylesheet" href="./CUSTOM-CSS/custom.css">
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+        <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/42.0.0/ckeditor5.css" />
     </head>
     <body>
 
@@ -1168,7 +1170,12 @@
 
         <script src="./JS_MAIN/Header.js"></script>
         <script src="./JS_MAIN/Footer.js"></script>
-
+        <!-- START FOR THE TOASTIFY JS -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <!-- END FILE TOASTIFY JS -->
+        <!-- START FILE CKE -->
+        <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/classic/ckeditor.js"></script>
+        <!-- END FILE CKE -->
          <script src="./JS_MAIN/general.js"></script>
         
         <script src="./JS_MAIN/menu.js"></script>
