--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,6 @@
             <i class="fas fa-angle-up"></i>
         </button>
         <!-- Scroll-top-end-->
-
-        <!-- <header>
             <div id="header-fixed-height"></div>
             <div class="header-top-wrap">
                 <div class="container-fluid p-0">
@@ -358,42 +356,6 @@
             </div>
             <!-- contact-map-end -->
 
-            <!-- newsletter-area -->
-            <!-- <section class="newsletter-area-three">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="newsletter-wrap-three">
-                                <div class="newsletter-content">
-                                    <h2 class="title">Get Our Latest News & Update</h2>
-                                </div>
-                                <div class="newsletter-form">
-                                    <form action="#">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Name">
-                                        </div>
-                                        <div class="form-grp">
-                                            <input type="email" placeholder="E-mail">
-                                        </div>
-                                        <button type="submit" class="btn">Submit Now</button>
-                                    </form>
-                                </div>
-                                <div class="newsletter-social">
-                                    <h4 class="title">Follow Us:</h4>
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-            <!-- newsletter-area-end -->
-
         </main>
         <!-- main-area-end -->
 
@@ -432,7 +394,12 @@
         <!-- END FILE CKE -->
         <script src="./JS_MAIN/Header.js"></script>
         <script src="./JS_MAIN/Footer.js"></script>
-
+        <!-- START FOR THE TOASTIFY JS -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <!-- END FILE TOASTIFY JS -->
+        <!-- START FILE CKE -->
+        <script src="https://cdn.ckeditor.com/ckeditor5/39.0.2/classic/ckeditor.js"></script>
+        <!-- END FILE CKE -->
         <script src="./JS_MAIN/general.js"></script>
         <script src="./JS_MAIN/menu.js"></script>
         <script src="./JS_MAIN/contact.js"></script>
