--- a/blog.html
+++ b/blog.html
@@ -432,15 +432,15 @@
                                 </div>
                                 <div class="pagination-wrap mt-60">
                                     <nav aria-label="Page navigation example">
-                                        <ul class="pagination list-wrap" id="myPagination">
-                                            <li class="page-item active"><a class="page-link" href="#">Previous</a></li>
-                                            <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                                        </ul>
+                                        <div class="pagination list-wrap" id="myPagination">
+                                            <a class="page-item-prev page-link active" href="#">Previous</a>
+                                            <a class="page-item page-link active" href="#">1</a>
+                                            <a class="page-item page-link" href="#">2</a>
+                                            <a class="page-item page-link" href="#">3</a>
+                                            <a class="page-item page-link" href="#">4</a>
+                                            <a class="page-item page-link" href="#">5</a>
+                                            <a class="page-item-next page-link" href="#">Next</a>
+                                        </div>
                                     </nav>
                                 </div>
                             </div>
@@ -524,12 +524,12 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="sidebar-widget sidebar-widget-two">
-                                        <div class="widget-title mb-30">
+                                    <div class="sidebar-widget sidebar-widget-two" id="FullRecentPosts">
+                                        <div class="widget-title mb-30" id="RecentTitle">
                                             <h6 class="title">Recent News</h6>
                                             <div class="section-title-line"></div>
                                         </div>
-                                        <div class="hot-post-wrap">
+                                        <div class="hot-post-wrap" id="RecentWrapper">
                                             <div class="hot-post-item">
                                                 <div class="hot-post-thumb">
                                                     <a href="blog-details.html"><img src="assets/img/blog/blog_rc_post.jpg" alt=""></a>
@@ -571,7 +571,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="sidebar-widget sidebar-widget-two">
+                                    <!-- <div class="sidebar-widget sidebar-widget-two">
                                         <div class="sidebar-newsletter">
                                             <div class="icon"><i class="flaticon-envelope"></i></div>
                                             <h4 class="title">Daily Newsletter</h4>
@@ -589,7 +589,7 @@
                                                 </form>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
