--- a/contact.html
+++ b/contact.html
@@ -114,8 +114,8 @@
                                                         <ul class="sub-menu">
                                                             <li class="menu-item-has-children"><a href="#">Single Post Layout</a>
                                                                 <ul class="sub-menu">
-                                                                    <li><a href="blog-details.html">Single post 01</a></li>
-                                                                    <li><a href="blog-details-two.html">Single post 02</a></li>
+                                                                    <li><a href="detail.html">Single post 01</a></li>
+                                                                    <li><a href="detail-two.html">Single post 02</a></li>
                                                                 </ul>
                                                             </li>
                                                             <li><a href="author.html">Author Details</a></li>
