--- a/blog.html
+++ b/blog.html
@@ -524,12 +524,12 @@
                                             </ul>
                                         </div>
                                     </div>
-                                    <div class="sidebar-widget sidebar-widget-two" id="FullRecentPosts">
+                                    <div class="sidebar-widget sidebar-widget-two">
                                         <div class="widget-title mb-30" id="RecentTitle">
                                             <h6 class="title">Recent News</h6>
                                             <div class="section-title-line"></div>
                                         </div>
-                                        <div class="hot-post-wrap" id="RecentWrapper">
+                                        <div class="hot-post-wrap" id="RecentPostWrapper">
                                             <div class="hot-post-item">
                                                 <div class="hot-post-thumb">
                                                     <a href="detail.html"><img src="assets/img/blog/blog_rc_post.jpg" alt=""></a>
@@ -571,8 +571,8 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <!-- <div class="sidebar-widget sidebar-widget-two">
-                                        <div class="sidebar-newsletter">
+                                    <div class="sidebar-widget sidebar-widget-two">
+                                        <div class="sidebar-newsletter" id="WrapperNewsletter">
                                             <div class="icon"><i class="flaticon-envelope"></i></div>
                                             <h4 class="title">Daily Newsletter</h4>
                                             <p>Get all the top stories from Blogs to keep track.</p>
@@ -589,7 +589,7 @@
                                                 </form>
                                             </div>
                                         </div>
-                                    </div> -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
