--- a/index.html
+++ b/index.html
@@ -496,11 +496,11 @@
         <!-- trending-post-area-end -->
 
         <!-- ad-banner-area -->
-        <div class="ad-banner-area pb-60">
+        <div class="ad-banner-area">
             <div class="container">
-                <div class="ad-banner-img adImage">
-                    <a href="#">
-                        <img src="assets/img/images/advertisement07.jpg" alt="">
+                <div class="ad-banner-img ad-banner-img-two text-center adImage">
+                    <a href="#" class="d-block">
+                        <img  src="assets/img/images/advertisement05.jpg" alt="" id="adImage" class="w-100" style="aspect-ratio: 984/200; object-fit: cover; ">
                     </a>
                 </div>
             </div>
@@ -862,141 +862,10 @@
         </section>
         <!-- weekly-post-area-end -->
 
-        <!-- newsletter-area -->
-        <!-- <section class="newsletter-area-three">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="newsletter-wrap-three" id="SubmitForm">
-                                <div class="newsletter-content">
-                                    <h2 class="title" id="">Get Our Latest News & Update</h2>
-                                </div>
-                                <div class="newsletter-form">
-                                    <form action="#">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Name">
-                                        </div>
-                                        <div class="form-grp">
-                                            <input type="email" placeholder="E-mail">
-                                        </div>
-                                        <button type="submit" class="btn">Submit Now</button>
-                                    </form>
-                                </div>
-                                <div class="newsletter-social">
-                                    <h4 class="title" >Follow Us:</h4>
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-        <!-- newsletter-area-end -->
 
     </main>
 
-    <!-- <footer>
-            <div class="footer-area">
-                <div class="footer-top">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-3 col-md-7">
-                                <div class="footer-widget">
-                                    <div class="fw-logo">
-                                        <a href="index.html"><img src="assets/img/logo/w_logo.png" alt=""></a>
-                                    </div>
-                                    <div class="footer-content">
-                                        <p>Browned butter and brown sugar caramelly goodness, crispy edges thick and soft centers and melty little puddles of chocolate.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-5 col-sm-6">
-                                <div class="footer-widget">
-                                    <h4 class="fw-title">Company</h4>
-                                    <div class="footer-link-wrap">
-                                        <ul class="list-wrap">
-                                            <li><a href="about.html">About Us</a></li>
-                                            <li><a href="contact.html">The Test Kitchen</a></li>
-                                            <li><a href="contact.html">Podcast</a></li>
-                                            <li><a href="contact.html">Events</a></li>
-                                            <li><a href="contact.html">Jobs</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-6">
-                                <div class="footer-widget">
-                                    <h4 class="fw-title">Get Help</h4>
-                                    <div class="footer-link-wrap">
-                                        <ul class="list-wrap">
-                                            <li><a href="contact.html">Contact & Faq</a></li>
-                                            <li><a href="contact.html">Oders & Returns</a></li>
-                                            <li><a href="contact.html">Gift Cards</a></li>
-                                            <li><a href="contact.html">Register</a></li>
-                                            <li><a href="contact.html">Catalog</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-4 col-sm-6">
-                                <div class="footer-widget">
-                                    <h4 class="fw-title">Explore</h4>
-                                    <div class="footer-link-wrap">
-                                        <ul class="list-wrap">
-                                            <li><a href="contact.html">The Shop</a></li>
-                                            <li><a href="contact.html">Recipes</a></li>
-                                            <li><a href="contact.html">Food</a></li>
-                                            <li><a href="contact.html">Travel</a></li>
-                                            <li><a href="contact.html">Hotline</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-2 col-md-4 col-sm-6">
-                                <div class="footer-widget">
-                                    <h4 class="fw-title">Follow us On</h4>
-                                    <div class="footer-link-wrap">
-                                        <ul class="list-wrap">
-                                            <li><a href="#">facebook</a></li>
-                                            <li><a href="#">Twitter</a></li>
-                                            <li><a href="#">Instagram</a></li>
-                                            <li><a href="#">Youtube</a></li>
-                                            <li><a href="#">Pinterest</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-bottom">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="footer-bottom-menu">
-                                    <ul class="list-wrap">
-                                        <li><a href="contact.html">Privacy Policy & Terms</a></li>
-                                        <li><a href="contact.html">Site Credits</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="copyright-text">
-                                    <p>© 2023 All Rights Reserved</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer> -->
-
-    <x-footer></x-footer>
+   <x-footer></x-footer>
 
     <!-- JS here -->-
     <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
