--- a/register.html
+++ b/register.html
@@ -168,50 +168,11 @@
             </div>
             <!-- contact-map-end -->
 
-            <!-- newsletter-area -->
-            <!-- <section class="newsletter-area-three">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="newsletter-wrap-three">
-                                <div class="newsletter-content">
-                                    <h2 class="title">Get Our Latest News & Update</h2>
-                                </div>
-                                <div class="newsletter-form">
-                                    <form action="#">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Name">
-                                        </div>
-                                        <div class="form-grp">
-                                            <input type="email" placeholder="E-mail">
-                                        </div>
-                                        <button type="submit" class="btn">Submit Now</button>
-                                    </form>
-                                </div>
-                                <div class="newsletter-social">
-                                    <h4 class="title">Follow Us:</h4>
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-            <!-- newsletter-area-end -->
-
         </main>
         <!-- main-area-end -->
 
         <x-footer></x-footer>
 
-        <!-- footer-area -->
-        
-        <!-- footer-area-end -->
 
 
         <!-- JS here -->
@@ -245,7 +206,7 @@
 
         <script src="./JS_MAIN/general.js"></script>
         <script src="./JS_MAIN/menu.js"></script>
-        <script src="./JS_MAIN/contact.js"></script>
+        <script src="./JS_MAIN/register.js"></script>
     </body>
     
 </html>
