--- a/register.html
+++ b/register.html
@@ -122,7 +122,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-md-10">
                             <div class="contact-img">
-                                <img src="./assets/img/login/login-icon-in-trendy-flat-style-isolated-on-white-background-approach-symbol-for-your-web-site-design-logo-app-ui-illustration-eps10-flat-style-for-graphic-design-vector.jpg" alt="">
+                                <img src="" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6">
