--- a/register.html
+++ b/register.html
@@ -80,8 +80,8 @@
 
             <!-- contact-area -->
             <section class="contact-area pt-80 pb-50">
-                <div class="container"  id="RegisterFullForm">
-                    <div class="contact-info-wrap">
+                <div class="container">
+                    <div class="contact-info-wrap" id="RegisterFullForm">
                         <div class="row justify-content-center">
                             <div class="col-xl-4 col-lg-6">
                                 <div class="contact-info-item">
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="contact-form" id="RegisterWrapper">
-                                <div id="formMessage"></div>
+                                <!-- <div id="formMessage"></div>
                                 <h4 class="title">Drop Us a Message</h4>
                                 <p>Have a question? Need help? Don't hesitate, drop us a line</p>
                                 <form id="contact-form" action="assets/mail.php" method="POST" id="auth-form">
@@ -154,7 +154,7 @@
                                     </div>
                                     <button type="submit" class="btn btn-two">Submit Now</button>
                                 </form>
-                                <p class="ajax-response mb-0"></p>
+                                <p class="ajax-response mb-0"></p> -->
                             </div>
                         </div>
                     </div>
