--- a/register.html
+++ b/register.html
@@ -127,34 +127,34 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="contact-form" id="RegisterWrapper">
-                                <!-- <div id="formMessage"></div>
-                                <h4 class="title">Drop Us a Message</h4>
-                                <p>Have a question? Need help? Don't hesitate, drop us a line</p>
-                                <form id="contact-form" action="assets/mail.php" method="POST" id="auth-form">
+                                <div id="formMessage"></div>
+                                <h4 class="title">Điền thông tin ngay</h4>
+                                <p>Đăng kí ngay bây giờ</p>
+                                <form action="https://zendvn.com/html-form-post" method="POST" id="AuthForm">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-grp">
-                                                <input type="text" name="name" placeholder="Name*" id="name" required>
+                                                <input type="text" name="name" placeholder="Tên*" id="name" required>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-grp">
-                                                <input type="email" name="email" placeholder="E-mail*" id="email" required>
+                                                <input type="email" name="email" placeholder="Email*" id="email" required>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-grp">
-                                        <input type="text" name="password" placeholder="Password*" id="password" required>
+                                        <input type="text" name="password" placeholder="Mật khẩu*" id="password" required>
                                     </div>
                                     <div class="form-grp">
-                                        <input type="number" name="phone" placeholder="Phone*" id="phone" required>
+                                        <input type="number" name="phone" placeholder="Số điện thoại*" id="phone" required>
                                     </div>
                                     <div class="form-grp">
-                                        <textarea name="address" placeholder="Address*" id="address"></textarea>
+                                        <textarea name="address" placeholder="Địa chỉ*" id="address"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-two">Submit Now</button>
+                                    <button type="submit" class="btn btn-two">Đăng kí</button>
                                 </form>
-                                <p class="ajax-response mb-0"></p> -->
+                                <p class="ajax-response mb-0"></p>
                             </div>
                         </div>
                     </div>
