--- a/detail.html
+++ b/detail.html
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="assets/css/default.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
+        <link rel="stylesheet" href="./CUSTOM-CSS/custom.css">
     </head>
     <body>
 
