update create post

--- a/login.html
+++ b/login.html
@@ -85,22 +85,21 @@
                         <div class="col-lg-12">
                             <div class="newsletter-wrap-three" id="NewsletterWrapper">
                                 <div class="newsletter-content">
-                                    <h2 class="title">Get Our Latest News & Update</h2>
+                                    <h2 class="title">Cập nhật tin tức mới nhất, đúng nhất</h2>
                                 </div>
                                 <div class="newsletter-form">
-                                    <div id="formMessage"></div>
-                                    <form action="#" id="auth-form">
+                                    <form action="#" id="AuthForm">
                                         <div class="form-grp">
-                                            <input type="email" placeholder="E-mail" name="email" id="email" required>
+                                            <input type="email" placeholder="Email" name="email" id="email" required>
                                         </div>
                                         <div class="form-grp">
-                                            <input type="password" placeholder="Password" name="password" id="password" required>
+                                            <input type="password" placeholder="Mật khẩu" name="password" id="password" required>
                                         </div>
-                                        <button type="submit" class="btn">Submit Now</button>
+                                        <button type="submit" class="btn">Đăng nhập</button>
                                     </form>
                                 </div>
                                 <div class="newsletter-social">
-                                    <h4 class="title">Follow Us:</h4>
+                                    <h4 class="title">Theo dõi chúng tôi tại:</h4>
                                     <ul class="list-wrap">
                                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
