update part of search

--- a/search.html
+++ b/search.html
@@ -72,22 +72,27 @@
                 </div>
             </div>
             <!-- breadcrumb-area-end -->
-
+            <div>
+                <h1 id="NumberPostResults">Tìm thấy 0 bài viết cho từ khóa NULL</h1>
+            </div>
             <!-- blog-area -->
             <section class="blog-area pt-60 pb-60">
                 <div class="container">
                     <div class="author-inner-wrap">
                         <div class="row justify-content-center">
                             <div class="col-70">
+                                <div class="weekly-post-item-wrap" id="articlesMain">
+                                    
+                                </div>
                                 <div class="pagination-wrap mt-60">
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination list-wrap" id="myPagination">
                                             <li class="page-item"><a class="page-link-prev" href="#">Previous</a></li>
-                                            <!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">1</a></li>
                                             <li class="page-item"><a class="page-link" href="#">2</a></li>
                                             <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">4</a></li> 
-                                            <li class="page-item"><a class="page-link" href="#">5</a></li> -->
+                                            <li class="page-item"><a class="page-link" href="#">4</a></li>
+                                            <li class="page-item"><a class="page-link" href="#">5</a></li>
                                             <li class="page-item"><a class="page-link-next" href="#">Next</a></li>
                                         </ul>
                                     </nav>
@@ -192,42 +197,6 @@
                 </div>
             </section>
             <!-- blog-area-end -->
-
-            <!-- newsletter-area -->
-            <!-- <section class="newsletter-area-three">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="newsletter-wrap-three">
-                                <div class="newsletter-content">
-                                    <h2 class="title">Get Our Latest News & Update</h2>
-                                </div>
-                                <div class="newsletter-form">
-                                    <form action="#">
-                                        <div class="form-grp">
-                                            <input type="text" placeholder="Name">
-                                        </div>
-                                        <div class="form-grp">
-                                            <input type="email" placeholder="E-mail">
-                                        </div>
-                                        <button type="submit" class="btn">Submit Now</button>
-                                    </form>
-                                </div>
-                                <div class="newsletter-social">
-                                    <h4 class="title">Follow Us:</h4>
-                                    <ul class="list-wrap">
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section> -->
-            <!-- newsletter-area-end -->
 
         </main>
         <!-- main-area-end -->
