update part of search and a part of admin list article

--- a/search.html
+++ b/search.html
@@ -43,15 +43,10 @@
                 <span class="icon"></span>
             </label>
         </div>
-        <!-- Dark/Light-toggle-end -->
-
-		<!-- Scroll-top -->
         <button class="scroll-top scroll-to-target" data-target="html">
             <i class="fas fa-angle-up"></i>
         </button>
-        <!-- Scroll-top-end-->
         <x-header></x-header>
-        <!-- main-area -->
         <main class="fix">
 
             <!-- breadcrumb-area -->
@@ -72,7 +67,7 @@
                 </div>
             </div>
             <!-- breadcrumb-area-end -->
-            <div>
+            <div class="row justify-content-center">
                 <h1 id="NumberPostResults">Tìm thấy 0 bài viết cho từ khóa NULL</h1>
             </div>
             <!-- blog-area -->
@@ -199,9 +194,6 @@
             <!-- blog-area-end -->
 
         </main>
-        <!-- main-area-end -->
-
-
         <x-footer></x-footer>
 
         <!-- JS here -->
