--- a/admin-list-article.html
+++ b/admin-list-article.html
@@ -120,42 +120,20 @@
                     </div>
                     <!-- MAIN AREA -->
                     <div class="row justify-content-center">
-                        <div class="col-lg-6 col-md-10">
-                            <div class="contact-img">
-                                <img src="" alt="">
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="contact-form" id="RegisterWrapper">
-                                <div id="formMessage"></div>
-                                <h4 class="title">Điền thông tin ngay</h4>
-                                <p>Đăng kí ngay bây giờ</p>
-                                <form action="https://zendvn.com/html-form-post" method="POST" id="AuthForm">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="form-grp">
-                                                <input type="text" name="name" placeholder="Tên*" id="name" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="form-grp">
-                                                <input type="email" name="email" placeholder="Email*" id="email" required>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-grp">
-                                        <input type="text" name="password" placeholder="Mật khẩu*" id="password" required>
-                                    </div>
-                                    <div class="form-grp">
-                                        <input type="number" name="phone" placeholder="Số điện thoại*" id="phone" required>
-                                    </div>
-                                    <div class="form-grp">
-                                        <textarea name="address" placeholder="Địa chỉ*" id="address"></textarea>
-                                    </div>
-                                    <button type="submit" class="btn btn-two">Đăng kí</button>
-                                </form>
-                                <p class="ajax-response mb-0"></p>
-                            </div>
+                        <div class="col-12 mx-auto">
+                            <div id="formMessage"></div>
+                            <table>
+                                <thead>
+                                    <th>ID</th>
+                                    <th>Thumb</th>
+                                    <th>Category</th>
+                                    <th>Hiển thị</th>
+                                    <th>Hành động</th>
+                                </thead>
+                                <tbody id="article">
+                                    
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
