--- a/admin-list-article.html
+++ b/admin-list-article.html
@@ -122,13 +122,14 @@
                     <div class="row justify-content-center">
                         <div class="col-12 mx-auto">
                             <div id="formMessage"></div>
-                            <table>
+                            <table class="tableStore">
                                 <thead>
-                                    <th>ID</th>
-                                    <th>Thumb</th>
-                                    <th>Category</th>
-                                    <th>Hiển thị</th>
-                                    <th>Hành động</th>
+                                    <th class="m-5">ID</th>
+                                    <th class="m-5">Thumb</th>
+                                    <th class="m-5">Title</th>
+                                    <th class="m-5">Category</th>
+                                    <th class="m-5">Hiển thị</th>
+                                    <th class="m-5">Hành động</th>
                                 </thead>
                                 <tbody id="article">
                                     
@@ -184,7 +185,7 @@
 
         <script src="./JS_MAIN/general.js"></script>
         <script src="./JS_MAIN/menu.js"></script>
-        <script src="./JS_MAIN//admin-create-article.js"></script>
+        <script src="./JS_MAIN//admin-list-article.js"></script>
     </body>
     
 </html>
