--- a/search.html
+++ b/search.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <!-- breadcrumb-area-end -->
-            <div class="row justify-content-center">
+            <div id="NumberPostResultsWrapper">
                 <h1 id="NumberPostResults">Tìm thấy 0 bài viết cho từ khóa NULL</h1>
             </div>
             <!-- blog-area -->
@@ -82,13 +82,6 @@
                                 <div class="pagination-wrap mt-60">
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination list-wrap" id="myPagination">
-                                            <li class="page-item"><a class="page-link-prev" href="#">Previous</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">4</a></li>
-                                            <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                            <li class="page-item"><a class="page-link-next" href="#">Next</a></li>
                                         </ul>
                                     </nav>
                                 </div>
