--- a/register.html
+++ b/register.html
@@ -67,8 +67,8 @@
                             <div class="breadcrumb-content">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Contact With Us</li>
+                                        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                                        <li class="breadcrumb-item active">Đăng ký</li>
                                     </ol>
                                 </nav>
                             </div>
