--- a/detail.html
+++ b/detail.html
@@ -66,7 +66,7 @@
                         <div class="col-lg-12">
                             <div class="breadcrumb-content">
                                 <nav aria-label="breadcrumb">
-                                    <ol class="breadcrumb">
+                                    <ol class="breadcrumb" id="breadCrumbArea">
                                         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                                         <li class="breadcrumb-item" aria-current="page"><a href="category.html">Blogs</a></li>
                                         <li class="breadcrumb-item active" aria-current="page">Smashing Podcast Episode 58 With Debbie What Is CX Design?</li>
@@ -354,11 +354,13 @@
                                             <h2 class="title">Subscribe & Followers</h2>
                                             <div class="section-title-line"></div>
                                         </div>
-                                        <div class="sidebar-social-wrap">
+                                        <div class="sidebar-social-wrap gap-1 d-flex">
                                             <ul class="list-wrap">
                                                 <li><a href="#"><i class="fab fa-facebook-f"></i>facebook</a></li>
                                                 <li><a href="#"><i class="fab fa-twitter"></i>twitter</a></li>
                                                 <li><a href="#"><i class="fab fa-instagram"></i>instagram</a></li>
+                                            </ul>
+                                            <ul class="list-wrap">
                                                 <li><a href="#"><i class="fab fa-youtube"></i>youtube</a></li>
                                                 <li><a href="#"><i class="fab fa-linkedin-in"></i>LinkedIn</a></li>
                                                 <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
@@ -412,25 +414,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="sidebar-widget sidebar-widget-two">
-                                        <div class="sidebar-newsletter" id="WrapperNewsletter">
-                                            <div class="icon"><i class="flaticon-envelope"></i></div>
-                                            <h4 class="title">Daily Newsletter</h4>
-                                            <p>Get all the top stories from Blogs to keep track.</p>
-                                            <div class="sidebar-newsletter-form-two">
-                                                <form action="#">
-                                                    <div class="form-grp">
-                                                        <input type="text" placeholder="Enter your e-mail">
-                                                        <button type="submit" class="btn">Subscribe Now</button>
-                                                    </div>
-                                                    <div class="form-check">
-                                                        <input type="checkbox" class="form-check-input" id="checkbox">
-                                                        <label for="checkbox">I agree to the terms & conditions</label>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
+                                   
                                 </div>
                             </div>
                         </div>
