--- a/profile.html
+++ b/profile.html
@@ -67,8 +67,8 @@
                             <div class="breadcrumb-content">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Contact With Us</li>
+                                        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Thông tin cá nhân</li>
                                     </ol>
                                 </nav>
                             </div>
@@ -120,11 +120,6 @@
                     </div>
                     <!-- MAIN AREA -->
                     <div class="row justify-content-center">
-                        <div class="col-lg-6 col-md-10">
-                            <div class="contact-img">
-                                <img src="" alt="">
-                            </div>
-                        </div>
                         <div class="col-lg-6">
                             <div class="contact-form" id="RegisterWrapper">
                                 <div id="formMessage"></div>
