--- a/category.html
+++ b/category.html
@@ -63,7 +63,7 @@
                             <div class="breadcrumb-content">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
                                         <li class="breadcrumb-item active" aria-current="page" id="overCategoryName">Blogs</li>
                                     </ol>
                                 </nav>
@@ -254,26 +254,26 @@
                             </div>
                             <div class="col-30">
                                 <div class="sidebar-wrap">
-                                    <div class="sidebar-widget">
+                                    <!-- <div class="sidebar-widget">
                                         <div class="sidebar-search">
                                             <form action="#">
                                                 <input type="text" placeholder="Search . . .">
                                                 <button type="submit"><i class="flaticon-search"></i></button>
                                             </form>
                                         </div>
-                                    </div>
-                                    
-                                 
+                                    </div> --> 
                                     <div class="sidebar-widget sidebar-widget-two">
                                         <div class="widget-title mb-25">
                                             <h2 class="title">Subscribe & Followers</h2>
                                             <div class="section-title-line"></div>
                                         </div>
-                                        <div class="sidebar-social-wrap">
+                                        <div class="sidebar-social-wrap d-flex gap-1">
                                             <ul class="list-wrap">
                                                 <li><a href="#"><i class="fab fa-facebook-f"></i>facebook</a></li>
                                                 <li><a href="#"><i class="fab fa-twitter"></i>twitter</a></li>
                                                 <li><a href="#"><i class="fab fa-instagram"></i>instagram</a></li>
+                                            </ul>
+                                            <ul  class="list-wrap">
                                                 <li><a href="#"><i class="fab fa-youtube"></i>youtube</a></li>
                                                 <li><a href="#"><i class="fab fa-linkedin-in"></i>LinkedIn</a></li>
                                                 <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
@@ -327,7 +327,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="sidebar-widget sidebar-widget-two">
+                                    <!-- <div class="sidebar-widget sidebar-widget-two">
                                         <div class="sidebar-newsletter" id="WrapperNewsletter">
                                             <div class="icon"><i class="flaticon-envelope"></i></div>
                                             <h4 class="title">Daily Newsletter</h4>
@@ -345,7 +345,7 @@
                                                 </form>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
