--- a/register.html
+++ b/register.html
@@ -120,11 +120,11 @@
                     </div>
                     <!-- MAIN AREA -->
                     <div class="row justify-content-center">
-                        <div class="col-lg-6 col-md-10">
+                        <!-- <div class="col-lg-6 col-md-10">
                             <div class="contact-img">
                                 <img src="" alt="">
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-lg-6">
                             <div class="contact-form" id="RegisterWrapper">
                                 <div id="formMessage"></div>
