--- a/admin-create-article.html
+++ b/admin-create-article.html
@@ -67,8 +67,8 @@
                             <div class="breadcrumb-content">
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
-                                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Contact With Us</li>
+                                        <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Tạo bài viết mới</li>
                                     </ol>
                                 </nav>
                             </div>
@@ -120,16 +120,11 @@
                     </div>
                     <!-- MAIN AREA -->
                     <div class="row justify-content-center">
-                        <div class="col-lg-6 col-md-10">
-                            <div class="contact-img">
-                                <img src="" alt="">
-                            </div>
-                        </div>
                         <div class="col-lg-6">
                             <div class="contact-form" id="RegisterWrapper">
                                 <div id="formMessage"></div>
                                 <h4 class="title">Tạo 1 bài viết</h4>
-                                <form action="https://zendvn.com/html-form-post" method="POST" id="AuthForm">
+                                <form action="https://zendvn.com/html-form-post" method="POST" id="AuthForm" class="text-align-center">
                                     <div class="form-grp">
                                         <img src="./assets/img/images/about_img02.jpg" class="w-100 mb-3" alt="" id="thumbPreview" style="border-radius: 10px;">
                                         <input
