update create article

--- a/category.html
+++ b/category.html
@@ -241,13 +241,13 @@
                                 <div class="pagination-wrap mt-60">
                                     <nav aria-label="Page navigation example">
                                         <ul class="pagination list-wrap" id="myPagination">
-                                            <li class="page-item"><a class="page-link-prev" href="#">Previous</a></li>
+                                            <li class="page-item"><a class="page-link-prev page-link" href="#">Previous</a></li>
                                             <li class="page-item"><a class="page-link" href="#">1</a></li>
                                             <li class="page-item"><a class="page-link" href="#">2</a></li>
                                             <li class="page-item"><a class="page-link" href="#">3</a></li>
                                             <li class="page-item"><a class="page-link" href="#">4</a></li>
                                             <li class="page-item"><a class="page-link" href="#">5</a></li>
-                                            <li class="page-item"><a class="page-link-next" href="#">Next</a></li>
+                                            <li class="page-item"><a class="page-link-next page-link" href="#">Next</a></li>
                                         </ul>
                                     </nav>
                                 </div>
