--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="sidebar-widget sidebar-widget-two">
+                                <!-- <div class="sidebar-widget sidebar-widget-two">
                                     <div class="sidebar-newsletter">
                                         <div class="icon"><i class="flaticon-envelope"></i></div>
                                         <h4 class="title">Daily Newsletter</h4>
@@ -363,7 +363,7 @@
                                             </form>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="sidebar-widget sidebar-widget-two" id="fullHotPosts">
                                     <div class="widget-title mb-30">
                                         <h6 class="title" id="hotPosts">Popular Posts</h6>
@@ -427,7 +427,7 @@
         <!-- trending-post-area-end -->
 
         <!-- ad-banner-area -->
-        <div class="ad-banner-area pb-60">
+        <!-- <div class="ad-banner-area pb-60">
             <div class="container">
                 <div class="ad-banner-img adImage">
                     <a href="#">
@@ -435,7 +435,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- ad-banner-area-end -->
 
         <!-- overlay-post-area -->
