--- a/nhap.html
+++ b/nhap.html
@@ -256,3 +256,8 @@
         </div>
     </div>
 </div> -->
+
+<div class="detail-inner mt-5">
+    <p class="mb-4">Bài viết khác</p>
+    ${html3}
+</div>
