--- a/admin-update-article.html
+++ b/admin-update-article.html
@@ -68,7 +68,7 @@
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Tạo bài viết mới</li>
+                                        <li class="breadcrumb-item active" aria-current="page">Cập nhật bài viết</li>
                                     </ol>
                                 </nav>
                             </div>
@@ -147,7 +147,7 @@
                                             required value="title"
                                         />    
                                     </div>
-                                    <button class="btn btn-danger mb-3 RandomButtonCSS" id="createArticle">Random ảnh</button>
+                                    <button class="btn btn-danger mb-3 RandomButtonCSS">Random ảnh</button>
                                     <div class="form-grp">
                                         <select class="form-select" id="category_id" name="category_id">
                                             <option selected>Chọn danh mục</option>
@@ -172,7 +172,7 @@
                                     <div class="form-grp">
                                         <textarea name="content"  placeholder="Content*" id="content">Nội dung chính</textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-two RandomButtonCSS">Tạo bài viết</button>
+                                    <button type="submit" class="btn btn-two RandomButtonCSS" id="createArticle">Tạo bài viết</button>
                                 </form>
                                 <p class="ajax-response mb-0"></p>
                             </div>
@@ -226,7 +226,7 @@
 
         <script src="./JS_MAIN/general.js"></script>
         <script src="./JS_MAIN/menu.js"></script>
-        <script src="./JS_MAIN/admin-create-article.js"></script>
+        <script src="./JS_MAIN/admin-update-article.js"></script>
     </body>
     
 </html>
