update and comment need fix

--- a/admin-create-article.html
+++ b/admin-create-article.html
@@ -135,7 +135,6 @@
                                             placeholder="Thumb link"
                                             required value=""
                                         />
-                                        <!-- <button type="submit" class="btn btn-two mt-3">Random ảnh</button> -->
                                     </div>
                                     <div class="form-grp">
                                         <input
@@ -170,7 +169,7 @@
                                         <textarea name="description" placeholder="Description*" id="description">Mô tả</textarea>
                                     </div>
                                     <div class="form-grp">
-                                        <textarea name="content"  placeholder="Content*" id="content">Nội dung chính</textarea>
+                                        <textarea name="content" placeholder="Content*" id="content">Nội dung chính thống</textarea>
                                     </div>
                                     <button type="submit" class="btn btn-two RandomButtonCSS">Tạo bài viết</button>
                                 </form>
