--- a/admin-update-article.html
+++ b/admin-update-article.html
@@ -123,7 +123,7 @@
                         <div class="col-lg-6">
                             <div class="contact-form" id="RegisterWrapper">
                                 <div id="formMessage"></div>
-                                <h4 class="title">Tạo 1 bài viết</h4>
+                                <h4 class="title mb-3">Cập nhật bài viết</h4>
                                 <form action="https://zendvn.com/html-form-post" method="POST" id="AuthForm" class="text-align-center">
                                     <div class="form-grp">
                                         <img src="./assets/img/images/about_img02.jpg" class="w-100 mb-3" alt="" id="thumbPreview" style="border-radius: 10px;">
@@ -170,9 +170,10 @@
                                         <textarea name="description" placeholder="Description*" id="description">Mô tả</textarea>
                                     </div>
                                     <div class="form-grp">
-                                        <textarea name="content"  placeholder="Content*" id="content">Nội dung chính</textarea>
+                                        <textarea name="content" placeholder="Content*" id="content">Nội dung chính thống</textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-two RandomButtonCSS">Cập nhật bài viết</button>
+                                    <button type="submit" class="btn btn-two RandomButtonCSS mb-3">Cập nhật bài viết</button>
+                                    <!-- <a href="./admin-list-article.html" class="btn btn-danger pb-3 pt-3 RandomButtonCSS">Quay lại</a> -->
                                 </form>
                                 <p class="ajax-response mb-0"></p>
                             </div>
