--- a/detail.html
+++ b/detail.html
@@ -213,10 +213,10 @@
                                         </div> -->
                                     </div>
                                     <div class="comments-wrap">
-                                        <h3 class="comments-wrap-title">02 Comments</h3>
+                                        <h3 class="comments-wrap-title" id="totalComments">0 Comments</h3>
                                         <div class="latest-comments">
-                                            <ul class="list-wrap">
-                                                <li>
+                                            <ul class="list-wrap" id="listComment">
+                                              <!-- <li>
                                                     <div class="comments-box">
                                                         <div class="comments-avatar">
                                                             <img src="assets/img/images/comment01.png" alt="img">
@@ -247,18 +247,18 @@
                                                             </div>
                                                         </li>
                                                     </ul>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="comment-respond">
-                                        <h3 class="comment-reply-title">Post a comment</h3>
-                                        <form action="#" class="comment-form">
-                                            <p class="comment-notes">Your email address will not be published. Required fields are marked *</p>
+                                        <form action="#" class="comment-form" id="commentForm">
+                                            <h3 class="comment-reply-title">Post a comment</h3>
+                                            <!-- <p class="comment-notes">Your email address will not be published. Required fields are marked *</p> -->
                                             <div class="form-grp">
-                                                <textarea name="comment" placeholder="Comment"></textarea>
+                                                <textarea name="comment" placeholder="Comment" id="commentContent"></textarea>
                                             </div>
-                                            <div class="row">
+                                            <!-- <div class="row">
                                                 <div class="col-md-4">
                                                     <div class="form-grp">
                                                         <input type="text" placeholder="Name">
@@ -278,7 +278,7 @@
                                             <div class="form-grp checkbox-grp">
                                                 <input type="checkbox" id="checkbox_two">
                                                 <label for="checkbox_two">Save my name, email, and website in this browser for the next time I comment.</label>
-                                            </div>
+                                            </div> -->
                                             <button type="submit" class="btn btn-two">Post Comment</button>
                                         </form>
                                     </div>
@@ -358,7 +358,7 @@
                                                 <li><a href="#"><i class="fab fa-linkedin-in"></i>LinkedIn</a></li>
                                                 <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
                                             </ul>
-                                        </div>
+                                        </div>  
                                     </div>
                                     <div class="sidebar-widget sidebar-widget-two">
                                         <div class="widget-title mb-30" id="RecentTitle">
@@ -410,9 +410,11 @@
                                    
                                 </div>
                             </div>
+                            <h6 id="commentNotice" class="mb-5 mt-3 d-none">Vui lòng <a href="./login.html" class="text-danger">Đăng nhập</a> để bình luận</h6>
                         </div>
                     </div>
                 </div>
+                
             </section>
             <!-- detail-area-end -->
 
