--- a/detail.html
+++ b/detail.html
@@ -344,7 +344,7 @@
                                     </div> -->
                                     <div class="sidebar-widget sidebar-widget-two">
                                         <div class="widget-title mb-25" >
-                                            <h2 class="title">Subscribe & Followers</h2>
+                                            <h2 class="title">Mạng xã hội</h2>
                                             <div class="section-title-line"></div>
                                         </div>
                                         <div class="sidebar-social-wrap gap-1 d-flex">
