--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                         <h2 class="title">Recent Posts</h2>
                                     </div>
                                     <div class="view-all-btn">
-                                        <a href="category.html" class="link-btn">View All
+                                        <a href="category.html" class="link-btn">Xem thêm
                                             <span class="svg-icon">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" fill="none">
                                                     <path
